<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--fragment to display our maps-->
    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <!--floating action button-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:maxImageSize="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_earth_2"
        app:backgroundTint="@color/dark_green"
        app:fabSize="normal"
        app:tint="@android:color/white"
        app:rippleColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--options menu-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/options_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="96dp"
        android:visibility="gone"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintStart_toStartOf="@id/fab">

        <TextView
            android:id="@+id/option_clear_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_clean"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/off_white"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/option_random_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_marker"
            app:layout_constraintTop_toBottomOf="@id/option_clear_map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:textColor="@color/off_white"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/option_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom_in"
            app:layout_constraintTop_toBottomOf="@id/option_random_marker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/off_white"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/option_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom_out"
            app:layout_constraintTop_toBottomOf="@id/option_zoom_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:textColor="@color/off_white"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
